Fixed visibility of phone nr

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ nav{
 
 ul{
     list-style-type: none;
-    color: #fff;
+    color: black;
 }
 
 
